Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3204

Crash when body_factory file is empty

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Configuration
    • None

    Description

      Reproducible on 5.0.x

      If you have a body factory page that is completely empty, after some time I start getting very obscure crashes all over the place (ssl, remap, etc.). If I add a single whitespace it works fine, seems that something in there doesn't like empty files.

      Attachments

        Issue Links

          Activity

            People

              jaript Jari Alhonen
              jacksontj Thomas Jackson
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m