TS-3204: Crash when body_factory file is empty

Set internal buffer to null for empty files to not follow the
crash-prone execution path.